--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -32,7 +32,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseABTesting",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -41,7 +41,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseAnalytics",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -50,7 +50,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseAuth",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -59,7 +59,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCore",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -68,7 +68,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCoreDiagnostics",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -77,7 +77,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCrashlytics",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -86,7 +86,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseDatabase",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -95,7 +95,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseDynamicLinks",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -104,7 +104,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseFirestore",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -113,7 +113,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseFunctions",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -122,7 +122,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseInAppMessaging",
-					"Version": "7.11.0-beta"
+					"Version": "8.0.0-beta"
 				}
 			}
 		},
@@ -131,7 +131,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseInstallations",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -140,7 +140,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseInstanceID",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -149,7 +149,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseMessaging",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -158,7 +158,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebasePerformance",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -167,7 +167,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseRemoteConfig",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -176,7 +176,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseStorage",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -185,7 +185,16 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseAppDistribution",
-					"Version": "7.11.0-beta"
+					"Version": "8.0.0-beta"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "Pod",
+				"Pod": {
+					"name": "FirebaseAppCheck",
+					"Version": "8.0.0-beta"
 				}
 			}
 		},
@@ -203,7 +212,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleAppMeasurement",
-					"Version": "7.11.0"
+					"Version": "8.0.0"
 				}
 			}
 		},
@@ -221,7 +230,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "google-cast-sdk",
-					"Version": "4.5.3"
+					"Version": "4.6.1"
 				}
 			}
 		},
@@ -230,7 +239,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleDataTransport",
-					"Version": "8.4.0"
+					"Version": "9.0.0"
 				}
 			}
 		},		
@@ -248,7 +257,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleMaps",
-					"Version": "4.2.0"
+					"Version": "5.0.0"
 				}
 			}
 		},
@@ -257,7 +266,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "Google-Mobile-Ads-SDK",
-					"Version": "8.4.0"
+					"Version": "8.5.0"
 				}
 			}
 		},
@@ -266,7 +275,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GooglePlaces",
-					"Version": "4.2.0"
+					"Version": "5.0.0"
 				}
 			}
 		},
@@ -284,7 +293,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleTagManager",
-					"Version": "7.2.0"
+					"Version": "7.3.1"
 				}
 			}
 		},
@@ -311,7 +320,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleUtilities",
-					"Version": "7.4.0"
+					"Version": "7.4.1"
 				}
 			}
 		},
