--- a/source/Google/Analytics/Analytics.targets
+++ b/source/Google/Analytics/Analytics.targets
@@ -1,18 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-
 	<PropertyGroup>
 		<_GoogleAnalyticsAssemblyName>Google.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleAnalyticsAssemblyName>
-		<_GoogleAnalyticsItemsFolder>GAnlytcs-3.17</_GoogleAnalyticsItemsFolder>
-		<_GoogleAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\Libraries\</_GoogleAnalyticsSDKBaseFolder>
+		<_GoogleAnalyticsItemsFolder>GAnlytcs-3.20</_GoogleAnalyticsItemsFolder>
+		<_GoogleAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\</_GoogleAnalyticsSDKBaseFolder>
+		<_GoogleAnalyticsFrameworksBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\GoogleAnalytics-3.20.0\Frameworks\</_GoogleAnalyticsFrameworksBaseFolder>
 	</PropertyGroup>
-
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleAnalyticsItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/5cd71dd2f756bb01/GoogleAnalytics-3.17.0.tar.gz</Url>
+			<Url>https://dl.google.com/firebase/ios/analytics/6c1e3b250fd4941d/GoogleAnalytics-3.20.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_GoogleAnalyticsSDKBaseFolder)libGoogleAnalytics.a">
+		<NativeReference Include="$(_GoogleAnalyticsFrameworksBaseFolder)GoogleAnalytics.xcframework">
 			<Kind>Static</Kind>
 			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
