--- a/samples/Firebase/InAppMessaging/InAppMessagingSample/GoogleService-Info.plist
+++ b/samples/Firebase/InAppMessaging/InAppMessagingSample/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.542613023302-4q15td3qis9g3fiaqvad15u0ptmv8odf</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD36zdfPJDkRValUgcv2JKxM0TShl6a1go</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>542613023302</string>
 	<key>PLIST_VERSION</key>
