--- a/samples/Firebase/Analytics/AnalyticsSample/GoogleService-Info.plist
+++ b/samples/Firebase/Analytics/AnalyticsSample/GoogleService-Info.plist
@@ -11,7 +11,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.542613023302-f8hs1nfc6v6kvhi61bn3f1vfjojtljr0</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDP7sQtUz3YAQbu2B6bXyN6Z2u8ZMhWavg</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>542613023302</string>
 	<key>PLIST_VERSION</key>
