--- a/samples/Firebase/Crashlytics/CrashlyticsSample/GoogleService-Info.plist
+++ b/samples/Firebase/Crashlytics/CrashlyticsSample/GoogleService-Info.plist
@@ -11,7 +11,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.542613023302-7e0b8hbnevm02romjbfmedf0u7jdnaal</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD36zdfPJDkRValUgcv2JKxM0TShl6a1go</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>542613023302</string>
 	<key>PLIST_VERSION</key>
