--- a/samples/Firebase/DynamicLinks/DynamicLinksSample/GoogleService-Info.plist
+++ b/samples/Firebase/DynamicLinks/DynamicLinksSample/GoogleService-Info.plist
@@ -11,7 +11,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.542613023302-a9gj9dv7mr4mg5jt22il26jrf67nrotk</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDP7sQtUz3YAQbu2B6bXyN6Z2u8ZMhWavg</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>542613023302</string>
 	<key>PLIST_VERSION</key>
