--- a/samples/Firebase/MLKit.Vision/MLKitVisionSample/GoogleService-Info.plist
+++ b/samples/Firebase/MLKit.Vision/MLKitVisionSample/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.542613023302-2nh4s02aqgq0kntqhdu3khh05tgvoi27</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD36zdfPJDkRValUgcv2JKxM0TShl6a1go</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>542613023302</string>
 	<key>PLIST_VERSION</key>
