--- a/samples/Firebase/MLKit/MLKitSample/GoogleService-Info.plist
+++ b/samples/Firebase/MLKit/MLKitSample/GoogleService-Info.plist
@@ -11,7 +11,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.542613023302-ec7cku6i4ijbe6v7c3d0roeki8aefrnk</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD36zdfPJDkRValUgcv2JKxM0TShl6a1go</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>542613023302</string>
 	<key>PLIST_VERSION</key>
