--- a/samples/Google/AppInvite/AppInviteSample/GoogleService-Info.plist
+++ b/samples/Google/AppInvite/AppInviteSample/GoogleService-Info.plist
@@ -7,6 +7,6 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.555848387497-t64u4p486joem8q1upqnscm8els9dsvs</string>
 	<key>API_KEY</key>
-	<string>YOUR_API_KEY_HERE</string>
+	<string></string>
 </dict>
 </plist>
