--- a/source/Firebase/Analytics/Analytics.targets
+++ b/source/Firebase/Analytics/Analytics.targets
@@ -3,26 +3,26 @@
 
 	<PropertyGroup>
 		<_FirebaseAnalyticsAssemblyName>Firebase.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAnalyticsAssemblyName>
-		<_FirebaseAnalyticsItemsFolder>FAnlytcs-8.8.0</_FirebaseAnalyticsItemsFolder>
-		<_FirebaseAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAnalyticsItemsFolder)\FirebaseAnalytics-8.8.0\Frameworks\</_FirebaseAnalyticsSDKBaseFolder>
+		<_FirebaseAnalyticsItemsFolder>FAnlytcs-8.9.1</_FirebaseAnalyticsItemsFolder>
+		<_FirebaseAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAnalyticsItemsFolder)\FirebaseAnalytics-8.9.1\Frameworks\</_FirebaseAnalyticsSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseAnalyticsItemsFolder)">
-			<Url>https://dl.google.com/firebase/ios/analytics/1513af860ecf3170/FirebaseAnalytics-8.8.0.tar.gz</Url>
+			<Url>https://dl.google.com/firebase/ios/analytics/66ce3623aa8037ff/FirebaseAnalytics-8.9.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FAnlytcsDownloadedItems" />
 	</ItemGroup>
 	<Target Name="_FAnlytcsDownloadedItems">
 		<ItemGroup>
-			<!-- From https://dl.google.com/firebase/ios/analytics/1513af860ecf3170/FirebaseAnalytics-8.8.0.tar.gz -->
+			<!-- From https://dl.google.com/firebase/ios/analytics/66ce3623aa8037ff/FirebaseAnalytics-8.9.1.tar.gz -->
 			<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseAnalytics.xcframework">
 				<Kind>Framework</Kind>
 				<SmartLink>True</SmartLink>
 				<ForceLoad>True</ForceLoad>
 				<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
-				<Frameworks>AddressBook AdSupport CoreGraphics StoreKit SystemConfiguration</Frameworks>
+				<Frameworks>StoreKit</Frameworks>
 			</NativeReference>
 		</ItemGroup>
 	</Target>
