--- a/source/Google/Maps/Maps.targets
+++ b/source/Google/Maps/Maps.targets
@@ -2,14 +2,14 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleMapsAssemblyName>Google.Maps, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMapsAssemblyName>
-		<_GoogleMapsItemsFolder>GMps-5.1.0</_GoogleMapsItemsFolder>
+		<_GoogleMapsItemsFolder>GMps-5.2.0</_GoogleMapsItemsFolder>
 		<_GoogleMapsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMapsItemsFolder)\Maps\Frameworks\</_GoogleMapsSDKBaseFolder>
 		<_GoogleMapsBaseSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMapsItemsFolder)\Base\Frameworks\</_GoogleMapsBaseSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleMapsItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/3cd76dc5e4525f42/GoogleMaps-5.1.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/30e3f62d24aa15cd/GoogleMaps-5.2.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework">
@@ -17,7 +17,7 @@
 			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC</LinkerFlags>
-			<Frameworks>Accelerate CoreImage CoreTelephony CoreText GLKit ImageIO OpenGLES QuartzCore Security</Frameworks>
+			<Frameworks>Accelerate CoreImage CoreText GLKit ImageIO Metal OpenGLES QuartzCore</Frameworks>
 		</NativeReference>
 		<NativeReference Include="$(_GoogleMapsSDKBaseFolder)GoogleMapsCore.framework">
 			<Kind>Framework</Kind>
@@ -30,7 +30,7 @@
 			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC -lc++ -lz</LinkerFlags>
-			<Frameworks>CoreData CoreGraphics CoreLocation QuartzCore SystemConfiguration UIKit</Frameworks>
+			<Frameworks>CoreData CoreGraphics CoreLocation CoreTelephony QuartzCore SystemConfiguration UIKit</Frameworks>
 		</NativeReference>
 		<XamarinBuildRestoreResources Include="_GMpsDownloadedItems" />
 	</ItemGroup>
@@ -170,6 +170,10 @@
 			</BundleResource>
 			<BundleResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCoreResources.bundle\GMSNavSprites-0-3x.png" Visible="False">
 				<LogicalName>GoogleMaps.bundle\GMSCoreResources.bundle\GMSNavSprites-0-3x.png</LogicalName>
+				<Optimize>False</Optimize>
+			</BundleResource>
+			<BundleResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCoreResources.bundle\GMSShaders.metallib" Visible="False">
+				<LogicalName>GoogleMaps.bundle\GMSCoreResources.bundle\GMSShaders.metallib</LogicalName>
 				<Optimize>False</Optimize>
 			</BundleResource>
 			<BundleResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCoreResources.bundle\GMSSprites-0-1x.png" Visible="False">
