--- a/source/Google/Places/Places.targets
+++ b/source/Google/Places/Places.targets
@@ -3,19 +3,20 @@
 
 	<PropertyGroup>
 		<_GooglePlacesAssemblyName>Google.Places, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GooglePlacesAssemblyName>
-		<_GooglePlacesItemsFolder>GPlcs-5.0.0</_GooglePlacesItemsFolder>
+		<_GooglePlacesItemsFolder>GPlcs-5.1.0</_GooglePlacesItemsFolder>
 		<_GooglePlacesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GooglePlacesItemsFolder)\Frameworks\</_GooglePlacesSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GooglePlacesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/87771cb1abc823c0/GooglePlaces-5.0.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/930a37db21878d76/GooglePlaces-5.1.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_GooglePlacesSDKBaseFolder)GooglePlaces.framework">
 			<Kind>Framework</Kind>
 			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
+			<Frameworks>CoreGraphics CoreLocation QuartzCore UIKit</Frameworks>
 			<LinkerFlags>-ObjC</LinkerFlags>
 		</NativeReference>
 		<XamarinBuildRestoreResources Include="_GPlcsDownloadedItems" />
