--- a/samples/MLKit/MLKitVision/MLKitVisionSample/GoogleService-Info.plist
+++ b/samples/MLKit/MLKitVision/MLKitVisionSample/GoogleService-Info.plist
@@ -2,38 +2,34 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>542613023302-csn23etrtle0bd1k1htiads4i871jbue.apps.googleusercontent.com</string>
+	<string>542613023302-2nh4s02aqgq0kntqhdu3khh05tgvoi27.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.542613023302-csn23etrtle0bd1k1htiads4i871jbue</string>
+	<string>com.googleusercontent.apps.542613023302-2nh4s02aqgq0kntqhdu3khh05tgvoi27</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDP7sQtUz3YAQbu2B6bXyN6Z2u8ZMhWavg</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>542613023302</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.xamarin.firebase.ios.admobsample</string>
+	<string>com.xamarin.firebase.ios.MLKitVisionSample</string>
 	<key>PROJECT_ID</key>
 	<string>xamarinfirebase-67094</string>
 	<key>STORAGE_BUCKET</key>
 	<string>xamarinfirebase-67094.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:542613023302:ios:28a2d721475c667d</string>
+	<string>1:542613023302:ios:47b77955dfc8d2eacbf847</string>
 	<key>DATABASE_URL</key>
 	<string>https://xamarinfirebase-67094.firebaseio.com</string>
 </dict>
