Removed GoogleService-Info.plist files * Added a warning page on samples when the plist file is missing

--- a/samples/Firebase/Analytics/AnalyticsSample/AnalyticsSample.csproj
+++ b/samples/Firebase/Analytics/AnalyticsSample/AnalyticsSample.csproj
@@ -129,7 +129,11 @@
     <Compile Include="UserPropertyContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="GoogleService-Info.plist" />
+    <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
+    <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\source\Firebase\Core\Core.csproj">
