--- a/samples/Firebase/InAppMessaging/InAppMessagingSample/InAppMessagingSample.csproj
+++ b/samples/Firebase/InAppMessaging/InAppMessagingSample/InAppMessagingSample.csproj
@@ -146,7 +146,11 @@
         </ProjectReference>
     </ItemGroup>
     <ItemGroup>
-      <BundleResource Include="GoogleService-Info.plist" />
+        <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
+        <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    </ItemGroup>
+    <ItemGroup>
+        <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')"/>
     </ItemGroup>
     <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Core\Core.targets" />
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
