--- a/samples/Firebase/MLKit.NaturalLanguage/NaturalLanguageSample/NaturalLanguageSample.csproj
+++ b/samples/Firebase/MLKit.NaturalLanguage/NaturalLanguageSample/NaturalLanguageSample.csproj
@@ -161,7 +161,11 @@
         </ProjectReference>
     </ItemGroup>
     <ItemGroup>
-        <BundleResource Include="GoogleService-Info.plist" />
+        <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
+        <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    </ItemGroup>
+    <ItemGroup>
+        <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')"/>
     </ItemGroup>
     <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Core\Core.targets" />
     <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.Common\MLKit.Common.targets" />
