--- a/samples/Firebase/MLKit/MLKitSample/MLKitSample.csproj
+++ b/samples/Firebase/MLKit/MLKitSample/MLKitSample.csproj
@@ -149,28 +149,32 @@
             <Name>RemoteConfig</Name>
         </ProjectReference>
         <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.Common\MLKit.Common.csproj">
-          <Project>{90DDF7C4-5223-4863-9687-6211BC5D56E5}</Project>
-          <Name>MLKit.Common</Name>
+            <Project>{90DDF7C4-5223-4863-9687-6211BC5D56E5}</Project>
+            <Name>MLKit.Common</Name>
         </ProjectReference>
         <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.ModelInterpreter\MLKit.ModelInterpreter.csproj">
-          <Project>{108BC6F9-E830-4F3B-85A9-DF7A70A06396}</Project>
-          <Name>MLKit.ModelInterpreter</Name>
+            <Project>{108BC6F9-E830-4F3B-85A9-DF7A70A06396}</Project>
+            <Name>MLKit.ModelInterpreter</Name>
         </ProjectReference>
         <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.NaturalLanguage\MLKit.NaturalLanguage.csproj">
-          <Project>{43F378EA-35C8-494E-9685-B00EBBA2A7A3}</Project>
-          <Name>MLKit.NaturalLanguage</Name>
+            <Project>{43F378EA-35C8-494E-9685-B00EBBA2A7A3}</Project>
+            <Name>MLKit.NaturalLanguage</Name>
         </ProjectReference>
         <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.Vision\MLKit.Vision.csproj">
-          <Project>{B0D91D94-300F-4DEB-A0A7-11DCBDF6FD64}</Project>
-          <Name>MLKit.Vision</Name>
+            <Project>{B0D91D94-300F-4DEB-A0A7-11DCBDF6FD64}</Project>
+            <Name>MLKit.Vision</Name>
         </ProjectReference>
         <ProjectReference Include="..\..\..\..\source\Firebase\Installations\Installations.csproj">
-          <Project>{65ACD945-5A8A-419D-B9FB-8DFD03C532F4}</Project>
-          <Name>Installations</Name>
+            <Project>{65ACD945-5A8A-419D-B9FB-8DFD03C532F4}</Project>
+            <Name>Installations</Name>
         </ProjectReference>
     </ItemGroup>
     <ItemGroup>
-      <BundleResource Include="GoogleService-Info.plist" />
+        <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
+        <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    </ItemGroup>
+    <ItemGroup>
+        <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')"/>
     </ItemGroup>
     <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Core\Core.targets" />
     <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.Common\MLKit.Common.targets" />
