--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -410,7 +410,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitCommon",
-					"Version": "4.0.0"
+					"Version": "5.0.0"
 				}
 			}
 		},
@@ -419,7 +419,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitVision",
-					"Version": "2.0.0"
+					"Version": "3.0.0"
 				}
 			}
 		},
@@ -437,7 +437,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitMDD",
-					"Version": "1.2.0"
+					"Version": "3.0.0"
 				}
 			}
 		},
@@ -455,7 +455,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitTextRecognitionCommon",
-					"Version": "1.0.0-beta2"
+					"Version": "1.0.0-beta3"
 				}
 			}
 		},
@@ -464,7 +464,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitTextRecognition",
-					"Version": "1.4.0-beta2"
+					"Version": "1.4.0-beta3"
 				}
 			}
 		},
@@ -473,7 +473,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitTextRecognitionChinese",
-					"Version": "1.4.0-beta2"
+					"Version": "1.0.0-beta3"
 				}
 			}
 		},
@@ -482,7 +482,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitTextRecognitionDevanagari",
-					"Version": "1.4.0-beta2"
+					"Version": "1.0.0-beta3"
 				}
 			}
 		},
@@ -491,7 +491,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitTextRecognitionJapanese",
-					"Version": "1.4.0-beta2"
+					"Version": "1.0.0-beta3"
 				}
 			}
 		},
@@ -500,7 +500,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitTextRecognitionKorean",
-					"Version": "1.4.0-beta2"
+					"Version": "1.0.0-beta3"
 				}
 			}
 		},
@@ -508,16 +508,7 @@
 			"component": {
 				"type": "Pod",
 				"Pod": {
-					"name": "MLKitFaceScanning",
-					"Version": "1.0.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "MLKitBarcodeScanning",
+					"name": "MLKitFaceDetection",
 					"Version": "1.5.0"
 				}
 			}
@@ -526,8 +517,17 @@
 			"component": {
 				"type": "Pod",
 				"Pod": {
+					"name": "MLKitBarcodeScanning",
+					"Version": "1.6.0"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "Pod",
+				"Pod": {
 					"name": "MLKitDigitalInkRecognition",
-					"Version": "1.4.0"
+					"Version": "1.5.0"
 				}
 			}
 		},
@@ -536,7 +536,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitVisionKit",
-					"Version": "3.0.0"
+					"Version": "4.0.0"
 				}
 			}
 		},
@@ -545,7 +545,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitImageLabelingCommon",
-					"Version": "2.0.0"
+					"Version": "3.0.0"
 				}
 			}
 		},
@@ -554,7 +554,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitObjectDetectionCommon",
-					"Version": "2.0.0"
+					"Version": "3.0.0"
 				}
 			}
 		},
@@ -563,7 +563,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitImageLabeling",
-					"Version": "1.4.0"
+					"Version": "1.5.0"
 				}
 			}
 		},
@@ -572,7 +572,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "MLKitObjectDetection",
-					"Version": "1.4.0"
+					"Version": "1.5.0"
 				}
 			}
 		}
