[Google/Maps|Places] Fixed version in components.cake * Removed 32 bits archs from samples * Fixed MinimumOSVersion

--- a/source/Google/Places/Places.targets
+++ b/source/Google/Places/Places.targets
@@ -16,7 +16,7 @@
 			<Kind>Framework</Kind>
 			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
-			<Frameworks>CoreGraphics CoreLocation QuartzCore UIKit</Frameworks>
+			<Frameworks>CoreGraphics CoreLocation QuartzCore Security UIKit</Frameworks>
 			<LinkerFlags>-ObjC</LinkerFlags>
 		</NativeReference>
 		<XamarinBuildRestoreResources Include="_GPlcsDownloadedItems" />
